--- a/src/css/App.css
+++ b/src/css/App.css
@@ -40,7 +40,7 @@ body {
   margin: auto;
   background-color: white;
   width: 45%;
-  height: 55%;
+  /* height: 55%; */
   padding: 3rem;
   display: flex;
   justify-content: center;
