--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,7 +9,6 @@
   height: 100vh;
 }
 
-
 html {
   box-sizing: border-box;
 }
@@ -20,6 +19,13 @@ body {
   background: linear-gradient(to right, #904e95, #e96443);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.header-title {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 30px;
+  word-spacing: 2px;;
+}
+
 .container {
   max-width: 600px;
   margin: 0 auto;
@@ -49,31 +55,12 @@ body {
 
 .title-header {
   color: #424242;
-  font-size: 2rem;
+  font-size: 25px;
   margin: 10px;
   font-family: 'Fjalla One', sans-serif;
   text-align: center;
 }
 
-.error {
-  background-color: #FBE9E7;
-  border: 1px solid #F4511E;
-  padding: 10px;
-  margin-bottom: 20px;
-  text-align: center;
-  color: #F4511E;
-}
-.correct {
-  background-color: rgb(211, 249, 187);
-  border: 1px solid rgb(50, 167, 0);
-  padding: 10px;
-  margin-bottom: 20px;
-  text-align: center;
-  color: rgb(4, 150, 50);
-}
-.error p {
-  margin:0;
-}
 .contain {
   margin-top: 60px;
   background-color: white;
@@ -85,7 +72,7 @@ body {
   margin-bottom: 40px;
 }
 .result div {
-  border: 1px solid #26C6DA;
+  border: 1px solid #4a69bd;
   text-align: center;
   padding: 0  0 20px 0;
 }
@@ -105,6 +92,7 @@ body {
 span.result {
   position: relative;
   width: 100%;
+  color: white;
 }
 
 .result-enter {
@@ -130,15 +118,14 @@ span.result {
 
 
 .gran-total {
+  width: 65%;
+  margin: auto;
   text-align: center;
   padding: .5rem;
-  border: 1px solid #26C6DA;
-  background-color: rgb(127, 224, 237);
+  background-color: #4a69bd;
   margin-top: 1rem;
-}
-
-.gran-total p {
-
+  box-shadow: 3px 5px 10px #888888;
+  margin-bottom: 5px;
 }
 
 .summary {
